add initial dice_pkg

--- a/dice_new/.gitignore
+++ b/dice_new/.gitignore
@@ -13,9 +13,12 @@ pwr/*
 *.so
 *.hsopt
 *.fsdb
-openRAM/__pycache__/*
+openRAM/__pycache__/
 openRAM/*
-tb/cgra_core/cgra_subsys/csrc/*
+tb/cgra_core/cgra_subsys/csrc/
 tb/cgra_core/cgra_subsys/simv*
 tb/cgra_core/cgra_subsys/ucli.key
 tb/cgra_core/cgra_subsys/*.log
+tb/cgra_core/cgra_subsys/verdiLog/
+tb/cgra_core/cgra_subsys/sys*
+tb/cgra_core/cgra_subsys/__pycache__/
