--- a/dice_new/tb/cgra_core/cgra_subsys/novas.rc
+++ b/dice_new/tb/cgra_core/cgra_subsys/novas.rc
@@ -115,6 +115,7 @@ IfShowModule = {TRUE, FALSE}
 [DisabledMessages]
 version = Verdi_X-2025.06
 184615126 = disabled
+152174612 = disabled
 [Emacs]
 EmacsFont = "Clean 14"
 EmacsBG = white
@@ -233,10 +234,10 @@ TclAutoSource =
 cmd_enter_form = FALSE
 SyncBrowserDir = TRUE
 FindBarVisible = 
-recent_commands_nWave = getSignal,getAllSignals,zoomAll,digitalFUDec,openFile,openFile
-recent_commands_Verdi = srcShowFile,hbLoadFsdbFile,hbReload,hbImpDsg
+recent_commands_nWave = zoomOut,zoomIn,zoomAll,editCut,digitalFUDec,digitalFBin,traceDriver,scrollUp,digitalFHex,nextEvent
 ColorThemeModern = bright
 version = Verdi_X-2025.06
+recent_commands_Verdi = hbLoadFsdbFile,hbReload,ToolBarTraceDriverGroup,hbTextCopy,srcShowFile,hbImpDsg
 prevColorThemeModern = bright
 SignalCaseInSensitive = FALSE
 [GlobalProp]
@@ -275,8 +276,8 @@ PrefetchViewableAnnot = TRUE
 designTreeBgColor = ID_WHITE
 import_default_language = Verilog
 import_from = source
-simulation_file_type = *.fsdb;*.vf;*.jf;*.zwd*
 ShowFileListView = FALSE
+simulation_file_type = *.fsdb;*.vf;*.jf;*.zwd*
 [Hier]
 filterTimeout = 1500
 [ImportLiberty]
@@ -394,9 +395,11 @@ openFileDlg = 435,235,602,483
 importDesignForm = 379,189,715,574
 QwQuestionMsgDlg = 1507,584,406,101
 qWaveSignalDialog = 1295,401,849,557
-loadFile = 1413,500,614,432
 Verdi_OpenFile = 1425,547,590,340
-QwUserAskDlg = 1558,656,324,122
+unknownSave = 822,568,461,245
+QwWarnMsgDlg = 746,754,600,250
+QwUserAskDlg = 615,486,324,122
+loadFile = 470,256,614,432
 [Safety]
 RegisterObject = ID_RED4
 CoreObject = ID_ORANGE5
@@ -438,13 +441,15 @@ vcs_mixPath = simv
 vcs_mixOption = -vhdlrun "-vhpi debussy:FSDBDumpCmd"
 scs_mixPath = scsim
 scs_mixOption = -vhpi debussy:FSDBDumpCmd
-interactiveDebugging = {True, False}
-KeepBreakPoints = False
 ScsDebugAll = False
 simType = {vcssv, xl, nc, vcs, mti, mti_vlog, vhnc, scs, mixnc}
 thirdpartyIdx = -1
 iscCmdSep = FALSE
 NoAppendOption = False
+bSVTBMode = TRUE
+SimMode = TRUE
+interactiveDebugging = TRUE
+KeepBreakPoints = FALSE
 [SimulationPlus]
 xlPath = verilog
 xlOption = 
@@ -468,16 +473,18 @@ vcs_mixPath = simv
 vcs_mixOption = -vhdlrun "-vhpi debussy:FSDBDumpCmd"
 scs_mixPath = scsim
 scs_mixOption = -vhpi debussy:FSDBDumpCmd
-vcs_svPath = simv
 vcs_svOption = 
-simType = vcssv
 thirdpartyIdx = -1
-interactiveDebugging = FALSE
-KeepBreakPoints = FALSE
 iscCmdSep = FALSE
 ScsDebugAll = FALSE
 NoAppendOption = FALSE
 invokeSimPath = work
+simType = vcssv
+bSVTBMode = TRUE
+SimMode = TRUE
+interactiveDebugging = TRUE
+KeepBreakPoints = FALSE
+vcs_svPath = /data/jwang710/vortex4dice/dice_new/tb/cgra_core/cgra_subsys/simv
 [SimulationPlus2]
 eventDumpUnfinish = FALSE
 [Source]
@@ -595,7 +602,7 @@ pdmlMacro = ID_BLACK
 font = COURIER12
 annotFont = FIXED12
 [Text.1]
-viewport = 0 27 3440 1305 45
+viewport = 0 27 1554 965 45
 [TextPrinter]
 Orientation = Landscape
 Indicator = FALSE
@@ -686,44 +693,44 @@ isOneSearchVisible = TRUE
 [VIA.oneSearch.preference.vgifColumnSettingRC.setting0]
 parRuleSets = ""
 [VIA.oneSearch.preference.vgifColumnSettingRC.setting0.column0]
-name = "Block's First Line"
-width = 120
-visualIndex = 1
-isHidden = TRUE
-isUserChangeColumnVisible = FALSE
-isColFilterColorCoding = FALSE
-[VIA.oneSearch.preference.vgifColumnSettingRC.setting0.column1]
 name = "Severity"
 width = 60
 visualIndex = 2
 isHidden = FALSE
 isUserChangeColumnVisible = FALSE
 isColFilterColorCoding = FALSE
-[VIA.oneSearch.preference.vgifColumnSettingRC.setting0.column2]
-name = "Message"
-width = 2000
-visualIndex = 5
-isHidden = FALSE
-isUserChangeColumnVisible = FALSE
-isColFilterColorCoding = FALSE
-[VIA.oneSearch.preference.vgifColumnSettingRC.setting0.column3]
+[VIA.oneSearch.preference.vgifColumnSettingRC.setting0.column1]
 name = "Time"
 width = 60
 visualIndex = 0
 isHidden = FALSE
 isUserChangeColumnVisible = FALSE
 isColFilterColorCoding = FALSE
-[VIA.oneSearch.preference.vgifColumnSettingRC.setting0.column4]
+[VIA.oneSearch.preference.vgifColumnSettingRC.setting0.column2]
 name = "Code"
 width = 60
 visualIndex = 3
 isHidden = TRUE
 isUserChangeColumnVisible = FALSE
 isColFilterColorCoding = FALSE
-[VIA.oneSearch.preference.vgifColumnSettingRC.setting0.column5]
+[VIA.oneSearch.preference.vgifColumnSettingRC.setting0.column3]
 name = "Type"
 width = 60
 visualIndex = 4
+isHidden = TRUE
+isUserChangeColumnVisible = FALSE
+isColFilterColorCoding = FALSE
+[VIA.oneSearch.preference.vgifColumnSettingRC.setting0.column4]
+name = "Message"
+width = 2000
+visualIndex = 5
+isHidden = FALSE
+isUserChangeColumnVisible = FALSE
+isColFilterColorCoding = FALSE
+[VIA.oneSearch.preference.vgifColumnSettingRC.setting0.column5]
+name = "Block's First Line"
+width = 120
+visualIndex = 1
 isHidden = TRUE
 isUserChangeColumnVisible = FALSE
 isColFilterColorCoding = FALSE
@@ -804,7 +811,7 @@ scope_to_save_with_macro
 open_file_dir
 open_rc_file_dir
 getSignalForm = 1295 364 849 557 179 465 426 111
-viewPort = 0 11 3440 515 100 65
+viewPort = 0 11 1554 395 219 66
 legendBackground = -c ID_BLACK
 valueBackground = -c ID_BLACK
 curveBackground = -c ID_BLACK
@@ -1607,7 +1614,7 @@ AddImportArgument = FALSE
 LineBreakWithScope = TRUE
 StopAfterCompileOption = -s
 [wave.0]
-viewPort = 0 11 3440 515 100 65
+viewPort = 0 11 1554 395 219 66
 [wave.1]
 viewPort = 127 219 960 332 100 65
 [wave.2]
